--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,2 +1,28 @@
+.containerMain {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-color: white;
+}
 
+ .containerNavBar{
+  display: flex;
+  width: 100%;
+  height: 90px;
+  align-items: center;
+  justify-content: center;
+  background-color: #1f75cb;
+  @media screen and (max-width: 480px) {
+    margin-bottom: 12rem;
+  }
+ }
+
+ .title {
+  color: #2fe4ed;
+  font-size: 30px;
+  font-weight: bold;
+  cursor: pointer;
+ }
 
