--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,7 +4,8 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  background-color: white;
+  background-color:#121113;
+  ;
 }
 
  .containerNavBar{
@@ -12,17 +13,17 @@
   width: 100%;
   height: 90px;
   align-items: center;
-  justify-content: center;
-  background-color: #1f75cb;
+  border-bottom: 1px solid #F1E6FD;
   @media screen and (max-width: 480px) {
     margin-bottom: 12rem;
   }
  }
 
  .title {
-  color: #2fe4ed;
+  color: white;
   font-size: 30px;
   font-weight: bold;
   cursor: pointer;
+  margin-left: 1rem;
  }
 
