--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -87,7 +89,8 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: white;
+  background-color:#121113;
+  
 }
 
 a {
